implemented learning of ir codes. switch to esp_log calls

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-default_envs = esp32doit
+;[platformio]
+;default_envs = esp32doit
 
 [common]
 lib_deps = 
@@ -23,16 +23,30 @@ lib_deps_external =
 	esphome/ESPAsyncWebServer-esphome@^3.1.0
 	https://github.com/petchmakes/IRremoteESP8266.git#9630be3
 	bblanchon/ArduinoJson@^7.0.3
+build_src_filter =
+    +<common/**>
+test_filter =
+    common/*
+build_flags =
+    -DCORE_DEBUG_LEVEL=4
 
 [env:esp32wroom]
 platform = espressif32 @ ^6.5.0
 board = az-delivery-devkit-v4
 framework = arduino
+check_tool = cppcheck
+check_flags = --enable=all
 lib_deps = 
 	${common.lib_deps_external}
 	${common.lib_deps}
+test_filter =
+    ${common.test_filter}
+    esp32/*		
 board_build.partitions = partitions.csv
 monitor_speed = 115200
+lib_ldf_mode = chain+
+build_flags = 
+    ${common.build_flags}
 
 [env:esp32doit]
 platform = espressif32 @ ^6.5.0
@@ -43,6 +57,34 @@ check_flags = --enable=all
 lib_deps = 
 	${common.lib_deps_external}
 	${common.lib_deps}
+test_filter =
+    ${common.test_filter}
+    esp32/*	
 board_build.partitions = partitions.csv
 monitor_speed = 115200
-build_flags = -DBLASTER_PIN_INDICATOR=2 -DBLASTER_PIN_IR_INTERNAL=13 -DBLASTER_PIN_IR_OUT_1=12
+lib_ldf_mode = chain+
+build_flags = 
+    ${common.build_flags}
+    -DBLASTER_PIN_INDICATOR=2 -DBLASTER_PIN_IR_INTERNAL=13 -DBLASTER_PIN_IR_OUT_1=12
+	-DBLASTER_ENABLE_IR_LEARN=true
+
+[env:native]
+platform = native
+test_framework = unity
+lib_ldf_mode = chain+
+lib_deps = 
+	ArduinoFake
+	bblanchon/ArduinoJson@^7.0.3
+build_flags = 
+	-std=c++11
+	-D UNIT_TEST
+	-D PIO_ENV_DESKTOP
+build_src_filter =
+    ${common.build_src_filter}
+    +<native/**>
+test_filter =
+    ${common.test_filter}
+    native/*	
+build_type = debug
+test_build_src = no
+
