Initial implementation of Ethernet Support

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,12 +12,6 @@
 ;default_envs = esp32doit
 
 [common]
-lib_deps = 
-	bt_service
-	api_service
-	config
-	mdns
-	ir_service
 lib_deps_external = 
 	esphome/AsyncTCP-esphome@^2.1.3
 	esphome/ESPAsyncWebServer-esphome@^3.1.0
@@ -28,6 +22,7 @@ build_src_filter =
 test_filter =
     common/*
 build_flags =
+    -std=gnu++11
     -DCORE_DEBUG_LEVEL=4
 
 [env:esp32wroom]
@@ -38,13 +33,13 @@ check_tool = cppcheck
 check_flags = --enable=all
 lib_deps = 
 	${common.lib_deps_external}
-	${common.lib_deps}
+
 test_filter =
     ${common.test_filter}
     esp32/*		
 board_build.partitions = partitions.csv
 monitor_speed = 115200
-lib_ldf_mode = chain+
+
 build_flags = 
     ${common.build_flags}
 
@@ -56,17 +51,46 @@ check_tool = cppcheck
 check_flags = --enable=all
 lib_deps = 
 	${common.lib_deps_external}
-	${common.lib_deps}
+
+board_build.partitions = partitions.csv
+monitor_speed = 115200
+
+build_flags = 
+    ${common.build_flags}
+    -DBLASTER_PIN_INDICATOR=2 #change indicator led output for esp32doit board 
+	-DBLASTER_PIN_IR_INTERNAL=12 -DBLASTER_PIN_IR_OUT_1=13 -DBLASTER_PIN_IR_OUT_2=14 #these are the standard pins. not required, but set for documentation purpose.
+	-DBLASTER_ENABLE_IR_LEARN=true -DBLASTER_PIN_IR_LEARN=16 #enable learning of ir codes
 test_filter =
     ${common.test_filter}
     esp32/*	
+
+[env:olimex_poe_iso]
+platform = espressif32 @ ^6.5.0
+board = esp32-poe-iso
+framework = arduino
+check_tool = cppcheck
+check_flags = --enable=all
+lib_deps = 
+	${common.lib_deps_external}
+
 board_build.partitions = partitions.csv
 monitor_speed = 115200
-lib_ldf_mode = chain+
+
 build_flags = 
     ${common.build_flags}
-    -DBLASTER_PIN_INDICATOR=2 -DBLASTER_PIN_IR_INTERNAL=13 -DBLASTER_PIN_IR_OUT_1=12
-	-DBLASTER_ENABLE_IR_LEARN=true
+	-DBLASTER_INDICATOR_MODE=INDICATOR_OFF # select to: INDICATOR_OFF, INDICATOR_LED (default), or INDICATOR_RGB
+	-DBLASTER_ENABLE_IR_OUT_1=false -DBLASTER_ENABLE_IR_OUT_2=false
+    -DBLASTER_PIN_IR_INTERNAL=14 -DBLASTER_PIN_IR_OUT_1=15 -DBLASTER_PIN_IR_OUT_2=16 # pins not yet verified!
+	-DBLASTER_ENABLE_IR_LEARN=false # disable the learning of ir codes. not needed as this is the default, but set for documentation purpose.
+	-DBLASTER_ENABLE_ETH=true #enables ethernet interface
+	-DOLIMEX_ESP=WROOM  # select WROOM or WROVER
+
+test_filter =
+    ${common.test_filter}
+    esp32/*	
+
+
+
 
 [env:native]
 platform = native
@@ -76,7 +100,7 @@ lib_deps =
 	ArduinoFake
 	bblanchon/ArduinoJson@^7.0.3
 build_flags = 
-	-std=c++11
+	-std=gnu++11
 	-D UNIT_TEST
 	-D PIO_ENV_DESKTOP
 build_src_filter =
