Changed Olimex default pinout. Added available customization build flags to Readme.md

--- a/platformio.ini
+++ b/platformio.ini
@@ -72,19 +72,18 @@ check_tool = cppcheck
 check_flags = --enable=all
 lib_deps = 
 	${common.lib_deps_external}
-
 board_build.partitions = partitions.csv
 monitor_speed = 115200
 
 build_flags = 
     ${common.build_flags}
 	-DBLASTER_INDICATOR_MODE=INDICATOR_OFF # select to: INDICATOR_OFF, INDICATOR_LED (default), or INDICATOR_RGB
-	-DBLASTER_ENABLE_IR_OUT_1=false -DBLASTER_ENABLE_IR_OUT_2=false
-    -DBLASTER_PIN_IR_INTERNAL=14 -DBLASTER_PIN_IR_OUT_1=15 -DBLASTER_PIN_IR_OUT_2=16 # pins not yet verified!
-	-DBLASTER_ENABLE_IR_LEARN=false # disable the learning of ir codes. not needed as this is the default, but set for documentation purpose.
+    -DBLASTER_PIN_IR_INTERNAL=4  #olimex MOD-IRDA on UEXT connector
+    -DBLASTER_ENABLE_IR_OUT_1=false # -DBLASTER_PIN_IR_OUT_1=15
+    -DBLASTER_ENABLE_IR_OUT_2=false # -DBLASTER_PIN_IR_OUT_2=16
+    -DBLASTER_ENABLE_IR_LEARN=true -DBLASTER_PIN_IR_LEARN=36  #olimex MOD-IRDA on UEXT connector
 	-DBLASTER_ENABLE_ETH=true #enables ethernet interface
 	-DOLIMEX_ESP=WROOM  # select WROOM or WROVER
-
 test_filter =
     ${common.test_filter}
     esp32/*	
