Added KoeBlaster hardware; Draft schematic and initial version of pcb board

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 .idea
 include/secrets.h
 kicad/*backup*/*.zip
+kicad/KoeBlaster/KoeBlaster-backups/*
+kicad/KoeBlaster/~KoeBlaster.kicad_pcb.lck
+kicad/KoeBlaster/~KoeBlaster.kicad_sch.lck
