--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-;[platformio]
-;default_envs = esp32doit
-
 [common]
 lib_deps_external = 
 	esphome/AsyncTCP-esphome@^2.1.3
@@ -33,33 +30,31 @@ check_tool = cppcheck
 check_flags = --enable=all
 lib_deps = 
 	${common.lib_deps_external}
-
 test_filter =
     ${common.test_filter}
     esp32/*		
 board_build.partitions = partitions.csv
 monitor_speed = 115200
-
 build_flags = 
     ${common.build_flags}
 
-[env:esp32doit]
-platform = espressif32 @ ^6.5.0
+[env:koeblaster]
+platform = espressif32 @ ^6.6.0
 board = esp32doit-devkit-v1
 framework = arduino
 check_tool = cppcheck
 check_flags = --enable=all
 lib_deps = 
 	${common.lib_deps_external}
-
 board_build.partitions = partitions.csv
 monitor_speed = 115200
 
 build_flags = 
     ${common.build_flags}
-    -DBLASTER_PIN_INDICATOR=2 #change indicator led output for esp32doit board 
-	-DBLASTER_PIN_IR_INTERNAL=12 -DBLASTER_PIN_IR_OUT_1=13 -DBLASTER_PIN_IR_OUT_2=14 #these are the standard pins. not required, but set for documentation purpose.
-	-DBLASTER_ENABLE_IR_LEARN=true -DBLASTER_PIN_IR_LEARN=16 #enable learning of ir codes
+    -DBLASTER_PIN_INDICATOR=2 #change indicator led output for esp32doit board TODO: change to PIXEL once receiving hw
+    -DBLASTER_PIN_IR_INTERNAL=16 -DBLASTER_PIN_IR_OUT_1=17 -DBLASTER_PIN_IR_OUT_2=18 # pins matching koeblaster hw version 0.1
+    -DBLASTER_ENABLE_IR_LEARN=true -DBLASTER_PIN_IR_LEARN=36 # enable learning of ir codes
+	-DBLASTER_ENABLE_RESETBTN=true -DBLASTER_PIN_RESETBTN=23 # enable reset/factoryreset button
 test_filter =
     ${common.test_filter}
     esp32/*	
@@ -77,7 +72,7 @@ monitor_speed = 115200
 
 build_flags = 
     ${common.build_flags}
-	-DBLASTER_INDICATOR_MODE=INDICATOR_OFF # select to: INDICATOR_OFF, INDICATOR_LED (default), or INDICATOR_RGB
+    -DBLASTER_INDICATOR_MODE=INDICATOR_OFF # select to: INDICATOR_OFF, INDICATOR_LED (default), or INDICATOR_PIXEL
     -DBLASTER_PIN_IR_INTERNAL=4  #olimex MOD-IRDA on UEXT connector
     -DBLASTER_ENABLE_IR_OUT_1=false # -DBLASTER_PIN_IR_OUT_1=15
     -DBLASTER_ENABLE_IR_OUT_2=false # -DBLASTER_PIN_IR_OUT_2=16
@@ -87,9 +82,6 @@ build_flags =
 test_filter =
     ${common.test_filter}
     esp32/*	
-
-
-
 
 [env:native]
 platform = native
