--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ lib_deps_external =
 	esphome/ESPAsyncWebServer-esphome@^3.1.0
 	https://github.com/petchmakes/IRremoteESP8266.git#9630be3
 	bblanchon/ArduinoJson@^7.0.3
+	fastled/FastLED@^3.6.0
 build_src_filter =
     +<common/**>
 test_filter =
@@ -51,7 +52,7 @@ monitor_speed = 115200
 
 build_flags = 
     ${common.build_flags}
-    -DBLASTER_PIN_INDICATOR=2 #change indicator led output for esp32doit board TODO: change to PIXEL once receiving hw
+    -DBLASTER_INDICATOR_MODE=INDICATOR_PIXEL -DBLASTER_PIN_INDICATOR=27 # digital pixel rgb led on gpio 27
     -DBLASTER_PIN_IR_INTERNAL=16 -DBLASTER_PIN_IR_OUT_1=17 -DBLASTER_PIN_IR_OUT_2=18 # pins matching koeblaster hw version 0.1
     -DBLASTER_ENABLE_IR_LEARN=true -DBLASTER_PIN_IR_LEARN=36 # enable learning of ir codes
 	-DBLASTER_ENABLE_RESETBTN=true -DBLASTER_PIN_RESETBTN=23 # enable reset/factoryreset button
