--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ lib_deps_external =
 	https://github.com/petchmakes/IRremoteESP8266.git#9630be3
 	bblanchon/ArduinoJson@^7.0.3
 	fastled/FastLED@^3.6.0
+	rzeldent/micro-moustache@^1.0.1
 build_src_filter =
     +<common/**>
 test_filter =
