add ota support

--- a/platformio.ini
+++ b/platformio.ini
@@ -55,8 +55,7 @@ build_flags =
     ${common.build_flags}
     -DBLASTER_INDICATOR_MODE=INDICATOR_PIXEL -DBLASTER_PIN_INDICATOR=27 # digital pixel rgb led on gpio 27
     -DBLASTER_PIN_IR_INTERNAL=16 -DBLASTER_PIN_IR_OUT_1=17 -DBLASTER_PIN_IR_OUT_2=18 # pins matching koeblaster hw version 0.1
-    -DBLASTER_ENABLE_IR_LEARN=true -DBLASTER_PIN_IR_LEARN=36 # enable learning of ir codes
-	-DBLASTER_ENABLE_RESETBTN=true -DBLASTER_PIN_RESETBTN=23 # enable reset/factoryreset button
+	-DBLASTER_ENABLE_OTA=true
 test_filter =
     ${common.test_filter}
     esp32/*	
