Documentation of readme.md and handling of missing filesystem in web task

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ build_flags =
     -DCORE_DEBUG_LEVEL=4
 
 [env:esp32wroom]
-platform = espressif32 @ ^6.5.0
+platform = espressif32 @ ^6.6.0
 board = az-delivery-devkit-v4
 framework = arduino
 check_tool = cppcheck
@@ -47,21 +47,22 @@ framework = arduino
 check_tool = cppcheck
 check_flags = --enable=all
 lib_deps = 
-	${common.lib_deps_external}
+    ${common.lib_deps_external}
 board_build.partitions = partitions.csv
 monitor_speed = 115200
-
 build_flags = 
     ${common.build_flags}
-    -DBLASTER_INDICATOR_MODE=INDICATOR_PIXEL -DBLASTER_PIN_INDICATOR=27 # digital pixel rgb led on gpio 27
-    -DBLASTER_PIN_IR_INTERNAL=16 -DBLASTER_PIN_IR_OUT_1=17 -DBLASTER_PIN_IR_OUT_2=18 # pins matching koeblaster hw version 0.1
-	-DBLASTER_ENABLE_OTA=true
+    -DBLASTER_INDICATOR_MODE=INDICATOR_PIXEL -DBLASTER_PIN_INDICATOR=27 # digital pixel rgb led on gpio 27. pins matching koeblaster hw version 0.2
+    -DBLASTER_PIN_IR_INTERNAL=16 -DBLASTER_PIN_IR_OUT_1=17 -DBLASTER_PIN_IR_OUT_2=18 # pins matching koeblaster hw version 0.2
+    -DBLASTER_ENABLE_IR_LEARN=true -DBLASTER_PIN_IR_LEARN=36 # pins matching koeblaster hw version 0.2
+    -DBLASTER_ENABLE_RESETBTN=true -DBLASTER_PIN_RESETBTN=23 # pins matching koeblaster hw version 0.2
+    -DBLASTER_ENABLE_OTA=true
 test_filter =
     ${common.test_filter}
-    esp32/*	
+    esp32/*
 
 [env:olimex_poe_iso]
-platform = espressif32 @ ^6.5.0
+platform = espressif32 @ ^6.6.0
 board = esp32-poe-iso
 framework = arduino
 check_tool = cppcheck
